# pleascach

./: .gitignore  CMakeLists.txt  README.md  pléascach.cpp
Input/: Input.cpp  Input.hpp
Memory/: Buffer.cpp  Buffer.hpp  Image.cpp  Image.hpp  Memory.cpp  Memory.hpp
Model/: GltfVertex.hpp  Model.cpp  Model.hpp
Object/: Object.cpp  Object.hpp
Renderer/: CommandBuffer.cpp  CommandBuffer.hpp  Framebuffer.cpp  Framebuffer.hpp  Pipeline.cpp  Pipeline.hpp  RenderPass.cpp  RenderPass.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  ShaderBuffer.cpp  ShaderBuffer.hpp  Swapchain.cpp  Swapchain.hpp  Texture.cpp  Texture.hpp  UniformBuffer.cpp  UniformBuffer.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexInfo.cpp  VertexInfo.hpp
Resources/: Texture.cpp  Texture.hpp
Scene/: BSP.cpp  BSP.hpp  Camera.hpp  Object.hpp  Terrain.cpp  Terrain.hpp
UI/: UI.cpp  UI.hpp
Window/: Window.cpp  Window.hpp
assets/maps/: hl1.bsp
assets/models/: ball.gltf  bunny.gltf  monk.gltf  monkebox.gltf
assets/shaders/: basic.frag  basic.frag.spv  basic.geom  basic.geom.spv  basic.vert  basic.vert.spv  bsp.frag  bsp.frag.spv  bsp.vert  bsp.vert.spv  explode.geom  explode.geom.spv  fraglight.geom  fraglight.geom.spv  fraglight.vert  fraglight.vert.spv  gol.geom  gol.geom.spv  gooch.frag  gooch.frag.spv  lambert.frag  lambert.frag.spv  manual.frag  manual.frag.spv  ray.frag  ray.frag.spv  ray.vert  ray.vert.spv  terrain.frag  terrain.frag.spv  terrain.tesc  terrain.tesc.spv  terrain.tese  terrain.tese.spv  terrain.vert  terrain.vert.spv  trace.frag  trace.frag.spv
assets/shaders/lighting/: fraglight.geom  fraglight.geom.spv  fraglight.vert  gooch.frag  lambert.frag  lambert.frag.spv  trace.frag.spv
assets/shaders/map/: bsp.frag  bsp.frag.spv  bsp.vert  bsp.vert.spv
assets/shaders/mesh/: basic.frag  basic.frag.spv  basic.vert  explode.geom
assets/shaders/terrain/: terrain.tesc  terrain.tesc.spv  terrain.tese  terrain.vert  terrain.vert.spv
assets/shaders/utils/box/: box.frag  box.geom  box.vert
assets/textures/: Rendering Quake 3 Maps.htm
cmake/: Findglfw3.cmake
include/: stb_image.h
include/csys/: command.h  item.h  item.inl  system.h  system.inl
include/imgui/: imgui_console.cpp
include/stb/: stb_image.h
include/tinygltf/: tiny_gltf.h
input/: input.cpp  input.hpp
memory/: memory.cpp
renderer/: RenderPass.cpp  RenderPass.hpp  command_buffer.cpp  command_buffer.hpp  compute_pipeline.hpp
util/: Timer.hpp  file.hpp  geo.hpp  glsl_types.hpp  int.hpp  log.hpp
vkb/: LICENCE  VkBootstrap.cpp  VkBootstrap.h  VkBootstrapDispatch.h
